<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/b">
    <TextView
            android:id="@+id/start"
            style="@style/MenuFont"
            android:layout_gravity="center_horizontal"
            android:text="@string/menu_start_game" android:layout_width="wrap_content"
            android:onClick="menu_search_game_click"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/settings"
            style="@style/MenuFont"
            android:text="@string/menu_settings_game" android:layout_width="wrap_content"
            android:hapticFeedbackEnabled="true"
            android:onClick="menu_settings_click"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal"/>

    <TextView
            android:id="@+id/about"
            style="@style/MenuFont"
            android:onClick="menu_help_click"
            android:text="@string/menu_help" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

    <TextView
            android:id="@+id/exit"
            style="@style/MenuFont"
            android:onClick="menu_exit_click"
            android:text="@string/menu_exit" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
</LinearLayout>